--- a/Messenger/FormMessenger.resx
+++ b/Messenger/FormMessenger.resx
@@ -126,4 +126,81 @@
   <metadata name="ColumnOtherMessages.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAABMLAAATCwAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA/wAABP8AAD//AABk/wAAd/8A
+        AHf/AAB3/wAAd/8AAHf/AAB3/wAAd/8AAHf/AAB3/wAAd/8AAHf/AAB3/wAAd/8AAHf/AABk/wAAPv8A
+        AAMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP8AAGL/AADm/wAA/f8A
+        AOT/AADd/wAA3f8AAN3/AADd/wAA3f8AAN3/AADd/wAA3f8AAN3/AADd/wAA3f8AAN3/AADd/wAA3f8A
+        AOT/AAD9/wAA5f8AAGEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD/AACU/wAA+P8A
+        AH//AAAWAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAP8AABf/AACB/wAA+f8AAJMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA/wAAYv8A
+        APj/AABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD/AABB/wAA+f8AAGEAAAAAAAAAAAAAAAAAAAAAAAAAAP8A
+        AAT/AADm/wAAfgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD/AACA/wAA5f8AAAQAAAAAAAAAAAAA
+        AAAAAAAA/wAAP/8AAP3/AAAWAAAAAAAAAAAAAAAA/wAAAf8AAOj/AADM/wAAh/8AACYAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP8AABf/AAD9/wAAPgAA
+        AAAAAAAAAAAAAAAAAAD/AABl/wAA4gAAAAAAAAAAAAAAAAAAAAAAAAAA/wAAd/8AAP//AAD0/wAA/f8A
+        AKn/AAB5/wAAk/8AAJT/AAB//wAATv8AAA4AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP8A
+        AOP/AABkAAAAAAAAAAAAAAAAAAAAAP8AAHH/AADWAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA/wAArv8A
+        AOH/AABA/wAAtf8AAM//AACz/wAAsf8AAMn/AAD4/wAA+f8AAJ3/AAAjAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAA/wAA1v8AAHEAAAAAAAAAAAAAAAAAAAAA/wAAcf8AANYAAAAAAAAAAAAAAAAAAAAAAAAAAP8A
+        AEr/AADs/wAAyf8AAAoAAAAAAAAAAAAAAAAAAAAAAAAAAP8AAAr/AABU/wAAyv8AAPT/AABlAAAAAAAA
+        AAAAAAAAAAAAAAAAAAD/AADW/wAAcQAAAAAAAAAAAAAAAAAAAAD/AABx/wAA1gAAAAAAAAAAAAAAAAAA
+        AAD/AABg/wAA+/8AAHb/AAAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD/AAAC/wAAcv8A
+        APv/AAB0AAAAAAAAAAAAAAAAAAAAAP8AANb/AABxAAAAAAAAAAAAAAAAAAAAAP8AAHH/AADWAAAAAAAA
+        AAAAAAAA/wAAO/8AAPj/AABkAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAA/wAAXP8AAP7/AABBAAAAAAAAAAAAAAAA/wAA1v8AAHEAAAAAAAAAAAAAAAAAAAAA/wAAcf8A
+        ANYAAAAAAAAAAAAAAAD/AADG/wAAoQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA/wAAn/8AANb/AAABAAAAAAAAAAD/AADW/wAAcQAAAAAAAAAAAAAAAAAA
+        AAD/AABx/wAA1gAAAAAAAAAA/wAAOv8AAPz/AAAkAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD/AAAj/wAA/v8AADoAAAAAAAAAAP8AANb/AABxAAAAAAAA
+        AAAAAAAAAAAAAP8AAHH/AADWAAAAAAAAAAD/AAB8/wAAzwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD/AADU/wAAdwAAAAAAAAAA/wAA1v8A
+        AHEAAAAAAAAAAAAAAAAAAAAA/wAAcf8AANYAAAAAAAAAAP8AAJT/AACzAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP8AALb/AACRAAAAAAAA
+        AAD/AADW/wAAcQAAAAAAAAAAAAAAAAAAAAD/AABx/wAA1gAAAAAAAAAA/wAAgv8AAMUAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA/wAAyP8A
+        AIAAAAAAAAAAAP8AANb/AABxAAAAAAAAAAAAAAAAAAAAAP8AAHH/AADWAAAAAAAAAAD/AABX/wAA9P8A
+        AAwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP8A
+        AA3/AAD1/wAAVQAAAAAAAAAA/wAA1v8AAHEAAAAAAAAAAAAAAAAAAAAA/wAAcf8AANYAAAAAAAAAAP8A
+        AAv/AADz/wAAagAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAA/wAAbP8AAPL/AAAKAAAAAAAAAAD/AADW/wAAcQAAAAAAAAAAAAAAAAAAAAD/AABx/wAA1gAA
+        AAAAAAAAAAAAAP8AAHn/AADv/wAAIQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAP8AACL/AADw/wAAdwAAAAAAAAAAAAAAAP8AANb/AABxAAAAAAAAAAAAAAAAAAAAAP8A
+        AHH/AADWAAAAAAAAAAAAAAAA/wAABf8AAL//AADe/wAAJgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAD/AAAn/wAA3/8AAL7/AAAFAAAAAAAAAAAAAAAA/wAA1v8AAHEAAAAAAAAAAAAA
+        AAAAAAAA/wAAcf8AANYAAAAAAAAAAAAAAAAAAAAA/wAADP8AALr/AAD0/wAAdP8AAAwAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAD/AAAN/wAAdf8AAPT/AAC5/wAADAAAAAAAAAAAAAAAAAAAAAD/AADW/wAAcQAA
+        AAAAAAAAAAAAAAAAAAD/AABl/wAA4gAAAAAAAAAAAAAAAAAAAAAAAAAA/wAAAv8AAHH/AADq/wAA8P8A
+        AKv/AABz/wAAXf8AAF3/AAB0/wAArP8AAPD/AADp/wAAb/8AAAEAAAAAAAAAAAAAAAAAAAAAAAAAAP8A
+        AOP/AABkAAAAAAAAAAAAAAAAAAAAAP8AAD//AAD8/wAAFQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP8A
+        AAr/AABe/wAApP8AANT/AADp/wAA6f8AANT/AACj/wAAXf8AAAkAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAD/AAAX/wAA/f8AAD4AAAAAAAAAAAAAAAAAAAAA/wAABP8AAOf/AAB8AAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAP8AAH//AADm/wAABAAAAAAAAAAAAAAAAAAAAAAAAAAA/wAAZP8AAPj/AAA/AAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAD/AABA/wAA+P8AAGIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA/wAAlf8A
+        APj/AAB8/wAAFQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAD/AAAV/wAAfv8AAPj/AACUAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAA/wAAZP8AAOf/AAD8/wAA4/8AAN3/AADd/wAA3f8AAN3/AADd/wAA3f8AAN3/AADd/wAA3f8A
+        AN3/AADd/wAA3f8AAN3/AADd/wAA4/8AAPz/AADm/wAAYwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA/wAABP8AAED/AABk/wAAd/8AAHf/AAB3/wAAd/8AAHf/AAB3/wAAd/8A
+        AHf/AAB3/wAAd/8AAHf/AAB3/wAAd/8AAHf/AABk/wAAP/8AAAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA///////////8AAA/+AAAH/D//w/j///Hx///48cH/+PPgA/zz8AD88+H
+        wfPPD/Dzzj/8c85//jPMf/4zzP//M8z//zPM//8zzH/+M8x//jPOP/xzzh/4c88H4PPPgAHzx+AH48f/
+        /+Pj///H8P//D/gAAB/8AAA///////////8=
+</value>
+  </data>
 </root>
